backend/backend.log
file:///workspaces/grok/backend/server.mjs:5
import { findAvailablePort } from 'portfinder';
         ^^^^^^^^^^^^^^^^^
SyntaxError: Named export 'findAvailablePort' not found. The requested module 'portfinder' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'portfinder';
const { findAvailablePort } = pkg;

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)

Node.js v20.18.1
